// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardImageOverlay customize 1`] = `
<div>
  <div
    class="card-img-overlay bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCardImageOverlay component 1`] = `
<div>
  <div
    class="card-img-overlay"
  />
</div>
`;
